perfecting the flow
